finished resource links and making banners expand and decrease

--- a/WATT.html
+++ b/WATT.html
@@ -27,7 +27,7 @@
 </div>
 
 <header class="display-container" style="max-width:1600px;min-width:500px" id="home">
-    <img class="image-banner" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" width="1600" height="800">
+    <img class="image-banner" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" style="width:100%;">
     <div class="display-bottomleft padding-mission1224 opacity">
         <a class="typeform-share" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="drawer_right" style="display:inline-block;text-decoration:none;background-color:white;color:black;cursor:pointer;font-family:'Times New Roman',sans-serif;font-size:20px;line-height:20px;text-align:center;margin:0;height:25px;padding:0px 20px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank" >Contact Us! </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     </div>
@@ -53,14 +53,14 @@
     <hr>
 
 
-    <img src="CALENDAR.png" height="150" width="1100"/>
+    <img src="CALENDAR.png" style="width:100%;"/>
     <div class="calendar" id="calendar" align="center">
         <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
     </div>
     <hr>
 
 
-    <img src="Team.png" height="150" width="1100"/>
+    <img src="Team.png"  style="width:100%;"/>
     <div>
 <!--        <h1 align="center" id="team">About Us</h1>-->
         <p class="text-grey" align="center">
@@ -140,7 +140,7 @@
     </div>
 
 
-    <img src="LOCATIONS.png" height="150" width="1100"/>
+    <img src="LOCATIONS.png" style="width:100%;"/>
     <div class="schools" id="schools">
         <hr>
         <div class=stAl id="stAl">
@@ -181,7 +181,7 @@
     </div>
 
     <hr>
-    <img src="RESOURCES.png" id="resources" height="150" width="1100"/>
+    <img src="RESOURCES.png" id="resources" style="width:100%;"/>
 
     <div class="row-resource schools">
     <div class="column-resource">
@@ -196,23 +196,33 @@
 </div>
     <div class="row-resource">
         <div class="column-resource">
-            <a href="https://www.codecademy.com/learn"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.png/v1/fill/w_470,h_88,al_c,q_80,usm_0.66_1.00_0.01/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.webp" alt="codeacademy" width="350"></a>
+            <a href="https://www.codecademy.com/learn"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.png/v1/fill/w_470,h_88,al_c,q_80,usm_0.66_1.00_0.01/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.webp" alt="codeacademy" style="width:100%;"></a>
         </div>
         <div class="column-resource">
-            <a href="https://www.khanacademy.org/hourofcode"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.png/v1/crop/x_0,y_129,w_599,h_157/fill/w_484,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.webp" alt="khan" width="350"></a>
+            <a href="https://www.khanacademy.org/hourofcode"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.png/v1/crop/x_0,y_129,w_599,h_157/fill/w_484,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.webp" alt="khan" style="width:100%;"></a>
         </div>
         <div class="column-resource">
-            <a href="https://www.khanacademy.org/computing/computer-programming"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_1bb73ce2141948718272da9c919830af~mv2.png/v1/crop/x_67,y_75,w_1134,h_216/fill/w_638,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_1bb73ce2141948718272da9c919830af~mv2.webp" alt="khan" width="350"></a>
+            <a href="https://www.khanacademy.org/computing/computer-programming"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_1bb73ce2141948718272da9c919830af~mv2.png/v1/crop/x_67,y_75,w_1134,h_216/fill/w_638,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_1bb73ce2141948718272da9c919830af~mv2.webp" alt="khan" style="width:100%;"></a>
+        </div>
+    </div>
+    <div class="row-resource">
+        <div class="column-resource">
+            <a href="https://www.playcodemonkey.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.png/v1/fill/w_500,h_236,al_c,q_80,usm_0.66_1.00_0.01/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.webp" alt="codingmonkey" style="width:100%;"></a>
+        </div>
+        <div class="column-resource">
+            <a href="http://www.crunchzilla.com/code-monster"> <img class= onlineresource src="http://www.crunchzilla.com/cm/monster2.png" alt="codemonster" style="width:100%;" height="200"></a>
+        </div>
+        <div class="column-resource">
+            <a href="http://spritebox.com/flash.html"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.png/v1/fill/w_370,h_230,al_c,q_80,usm_0.66_1.00_0.01/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.webp" alt="spritebox" style="width:100%;"></a>
         </div>
     </div>
 
 
 
 
-    <a href="https://www.playcodemonkey.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.png/v1/fill/w_500,h_236,al_c,q_80,usm_0.66_1.00_0.01/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.webp" alt="codingmonkey"></a>
-    <a href="http://www.crunchzilla.com/code-monster"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_4298e3257d5f4c6b867933b4be4f2473~mv2.png/v1/fill/w_242,h_252,al_c,lg_1,q_80/cfb250_4298e3257d5f4c6b867933b4be4f2473~mv2.webp" alt="codemonster"></a>
-    <a href="http://spritebox.com/flash.html"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.png/v1/fill/w_370,h_230,al_c,q_80,usm_0.66_1.00_0.01/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.webp" alt="spritebox"></a>
-    <img src="FAQ.png" height="150" width="1100"/>
+
+
+    <img src="FAQ.png" style="width:100%;"/>
     <div class="FAQ" div id="FAQ">
     <button class="accordion">How did WATT start?</button>
     <div class="panel">
@@ -275,7 +285,7 @@
         }
     </script>
     <hr>
-    <img src="CONTACT.png" height="150" width="1100"/>
+    <img src="CONTACT.png" style="width:100%;"/>
     <div id="contact" class="typeform-widget" data-url="https://wattcoding.typeform.com/to/PlHowG"
          style="width: 100%; height: 350px;"></div>
 
