fixed id issue for nav bar

--- a/WATT.html
+++ b/WATT.html
@@ -36,7 +36,7 @@
 
 
 
-<div class="content-mission" style="max-width:1100px">
+<div class="content-mission" style="max-width:1100px" id="calendar">
     <div class="row-mission padding-mission64" id="mission">
         <table>
             <tr>
@@ -54,13 +54,13 @@
 
 
     <img src="CALENDAR.png" style="width:100%;"/>
-    <div class="calendar" id="calendar" align="center">
+    <div class="calendar" align="center">
         <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
     </div>
     <hr>
 
 
-    <img src="Team.png"  style="width:100%;"/>
+    <img src="Team.png"  style="width:100%;" id="team"/>
     <div>
 <!--        <h1 align="center" id="team">About Us</h1>-->
         <p class="text-grey" align="center">
@@ -68,7 +68,7 @@
             We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
             team of juniors and seniors.</p>
     </div>
-    <div class="padding-left-team col-mission" id="team">
+    <div class="padding-left-team col-mission">
         <h1 class="center">Founders</h1><br>
         <div class="founders-image">
             <img src="https://static.wixstatic.com/media/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg/v1/crop/x_163,y_299,w_193,h_231/fill/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" height="125" width="125">
@@ -140,7 +140,7 @@
     </div>
 
 
-    <img src="LOCATIONS.png" style="width:100%;"/>
+    <img src="LOCATIONS.png" style="width:100%;" id="schools"/>
     <div class="schools" id="schools">
         <hr>
         <div class=stAl id="stAl">
@@ -210,7 +210,7 @@
             <a href="https://www.playcodemonkey.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.png/v1/fill/w_500,h_236,al_c,q_80,usm_0.66_1.00_0.01/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.webp" alt="codingmonkey" style="width:100%;"></a>
         </div>
         <div class="column-resource">
-            <a href="http://www.crunchzilla.com/code-monster"> <img class= onlineresource src="http://www.crunchzilla.com/cm/monster2.png" alt="codemonster" style="width:100%;" height="200"></a>
+            <a href="http://www.crunchzilla.com/code-monster"> <img class= onlineresource src="http://www.crunchzilla.com/cm/monster2.png" alt="codemonster" style="width:100%;" height="275"></a>
         </div>
         <div class="column-resource">
             <a href="http://spritebox.com/flash.html"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.png/v1/fill/w_370,h_230,al_c,q_80,usm_0.66_1.00_0.01/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.webp" alt="spritebox" style="width:100%;"></a>
