finished picture slideshow

--- a/WATT.html
+++ b/WATT.html
@@ -23,7 +23,7 @@
                 <a href="#resources" class="bar-button button">Resources</a>
                 <div class="dropdown-content">
                     <a href="#links">Links</a>
-                    <a href="#">Link 2</a>
+                    <a href="#photos">Photos</a>
                     <a href="#">Link 3</a>
                 </div>
             </div>
@@ -227,10 +227,10 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/dist/pa-embed-player.min.js" async></script>
-    <div class="pa-embed-player" style="width:100%; height:480px; display:none;"
-         data-link="https://photos.app.goo.gl/sLKCeVnsQKjCNMG38"
-         data-title="Website"
-         data-description="8 new photos added to shared album">
+    <div class="pa-embed-player" style="width:100%; height:480px; display:none;" id="photos"
+         data-link="https://photos.google.com/share/AF1QipODcjtDoZ9tFirbDu0Bezc72B3c-TRsu8_kWJArTLfWip0IbU5mUfdaU3XO-zcGjQ?key=bTlJZUhCWlp4aW5CV2dWWV85M1R3ckkwUjdnRWNR"
+         data-title="WATT"
+         data-description="57 new photos added to shared album">
         <img data-src="https://lh3.googleusercontent.com/q4Sh7xhzatJtwioyIKM9SJVQoUyEy5cyRSZ_uucJ-a66ldljjddIU_rFLQOEGfj3lZHrkugmJHyVQBVenjurlZElqgFPTq0ZkAZL8wmxz9BfuHzChOgeQ-TpIS6cPTAws126qGQ6=w1920-h1080" src="" alt="" />
         <img data-src="https://lh3.googleusercontent.com/glKszwwC964fPYeJXTO3v5VMvJNLwgkiZMcBsB3jFiSkWlpJzxgr1uJhztir45BYzd_cmY0n9g5U5cpM8vhthwP5DSowKj8ZscX5Lb_n8v6NXYSb-OsMd2Dcy7skk40cHxhZXRo2=w1920-h1080" src="" alt="" />
         <img data-src="https://lh3.googleusercontent.com/i3CXLh7czvSW6uFXelQj-sd9hYmfv0F9FNwMgwH1yz3l6JLm4xAfiZxfMBnr_ImHq1suSZfpng0O7DLTgSCWAl-CHy-tR9sHjPiOv812oMHmc69nLknRc3rxgcdUGilKfBSU5pjS=w1920-h1080" src="" alt="" />
@@ -239,7 +239,57 @@
         <img data-src="https://lh3.googleusercontent.com/EXJdpsj5eZHittEV9YV0mY-wnI2jZ9Fx8XVU8LgT641895mpoLIimpNgobW-cSTUK6WtOT1ctRI9tCYLw7TpChJhOuGDQjwfbC9yNztEY4KpwInv5CbSnQPxMAw2PhonrlWmkmj-=w1920-h1080" src="" alt="" />
         <img data-src="https://lh3.googleusercontent.com/HWGW9ZfnOIz7g-0jlerNl6yYzw269p-BKpCUmNAroPVhwsSWrHDRO04Wm8uBacgkwn58xgv_fCZitqg3VlKUMGZRzgExpm3Ro6SXXAokknJjUZHrvTQLRiOjYAGqVT_UMTULSS6E=w1920-h1080" src="" alt="" />
         <img data-src="https://lh3.googleusercontent.com/XEJ-3yvRGDLB13btnVXRWR6DOoAGn4-dO2MmuoQrVyLT5x2EVwGTPX36bquU9B4bBj3amxBbA__KR34V6p_tcAREFhllPxrIpaBKpd-CUe0zthvA-2iK-DdyaZTl0kvXRNMoVhM9=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/buirSEE0PgAZq26zHM2hz92X6hZOcsKRzgDicFa0l6YaPSSZc2wLtDeNvn_b4U5tYwkncIthMbjoxZExNdc5v1sO5Hqk574-lyStYxNF8NJ-BaDslGg50x9rJitaAHUxMn3JR32qLg=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/xyARr-PtZBMDTDk7DyXYSGED0SOZ9HZOqKKeKQAWYHLih4KUNhfL-Ehdi0dHn2SSsvLRzztz1a59fm_VnY0xFgdRN885MgVuBSQC82h2iSkg5bsmdTTZRC2Q7zaDq1b8KxoqiiHySQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/JK9hMKMYtRwoeWJSSvGOlqlgTiAw4Re92zJMzY9lN844FleysmStNvlk-7tuteCTzFIgQgqPq2t3ovzf-RdM3PZTbNCLRZ--O_DqMGOMzYleBZqYR-45Uz_ZbU2S0o040C_gPkZSUw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/jtA_bcXXNNIkrLJY00k4byTr827ooRzLawQw6Nm-nWBfrpqFam3hL6khLJAvxDMZ0gIrnfns_nHz8kHALsYV8hZ18OJJVJW1mhYD5JW0uUw0FvAOPYF0Y_gn4OuOkQNBbeWNA_g-xA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/tpMGeO63kd0WXVFmweGvUOmgvXQ7zniv8qdX2JGIww7pEAzIRyWSGcNocVlbyAVaF8WsKhKmy29PlOvn89D8x0ROZoVn81A_VeQDpCtFzo38zjKjxL92S9NfWjGt4w2NWqppE8oSEw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/D3iP2c02LRQRxa-BneRq2UF-sE7PpCs5duZImG61QOkAmNncwyTW53xUNMjVoeicF7oW3p2859sfIzUtDN--10uFdJj65A4s5cT8ZAQ9jwI9IIGY_uTUK04UqXkEip3I0Qfpi-W92w=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/M3wV66qpuN-ADzX9lPIkLYydzzHwoDfD9sZheGLW7rrX2ojXmqZWNRWxre9Ccx2wH1IonB6yBY8rr_uTGcK5yKZ0AeNa1ujZbsvJo3Uv42BTt4G5NX9W_mti7ToUlTwYyDUAGaxpgg=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/ADhjuFSnvSOc1E-Vs-bxgVRPyYA-RL05RRcA4cmvLhu7J4G5swFexFGT1KnEVh-GqZ2FaXhHL1kInem9YXGoUUdtFBMd2whCutnkb3p0tR-C6tjlmOdchrey9ZGeHcZqlS88bVdnfw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/JpA7ZWR4ZKHl7DmJdvoFYclV_jCKSfDD9SAtkrhNFUsfhH7Ik3jm8DPXvxyPTA1Zm7eUq6cNXwa3C4AOu55ry1-SQKTMsDsZnaj53DnSny4FXM2FjD2QaPNND5ECB-pYIupyqm9A1w=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/Yo8NEWxqt8q7E9U1GcuyinUhIbmPiWhmz_7-yNoTFQViVcCXulPexaOFCkhrUf6TdYOaig-rJ93_urASOjnY5EgHkud5H76E-0T4sg_L7E1b-lhsbIfIJi2AOgpfdpjQSZyHgzS1KA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/6EFsSlC9wB1_7fS8yJXpF91a6SlFylOTE8WP3Ufr0DGo4Muk5iZlFWAY5Rl_R99uKS_324EciwwfulfkCx7tPRUm8HFBQifSGIAchN3EeOjJ9esLJzKo1qYNvacPiteHHVKJDafwNg=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/zhN6xLEueZzpyD7MiEQGC2Ci32PFwX9buw22vGK85zGvM3yy5gu2zCcMiukJQ0DacnAWzx8CJ1Z1grmnCJ3IogJiWAXaLrfT_VylnYxUeCD9ppGS5Wi7buqg5MIx6MAPh7_2Sye20g=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/GXYnLHGm-MilzW062dJE0qTiHp7gWj_iWR9bCkGuXHk_vYnAKOwunVt1BSyRdRbSM2IHV06tTTfOnQyPYEylxQUC7xczQfTvB7If1mBpeMrtKdtzC5ruZa_DCml8kzDv1U_XmLA-Cw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/a84NbUIUc9_2McrA0GnI7ytKUcCOxNcJHsbfAb4oMZFXit9Qoatm7nSamdtml05FrJ1p2zlzbZln6-RAeVjsoUHZgw4tSfmSv25RHrX8KaTcqyDzLmcEIk0Ae72klnEa-VUYEVnmTw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/JIj0dE4RCb7bkLqrAlRe9znGXuSp0gFnvy1O7cdgrRb3XuQ8q6A-4tzkO0bPvRWy_2DK9ULOgzdsZyKJCwp8_JrKxjMSoL1Wxp8lv_CdsTbmtRbwKCKDJ01j5j3AolqtgFyWYHhGww=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/Jfm-9gJFtxoa3hdTyzH960tUrVJKTjfmEiQeqAoHcULjk_3dWDkh0rtb2nMCd5jcwk2xUBbXRTp-vGUBEp6DZ6-7QnEjjQcPyjUIxUZlmQ0lTZdrNkKRUHy3Nsc6-J5d-r7ZnCesJw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/GStT_3fcK6bRK0FRLkg2AafgZo_sSUzONudG0MtbEunQffAtdfR948aI7AJ3AlOGZKUydm2LIV4A6aTjIsqfJAb145XRzqPvVgW43nWCQO_69DhNBCkXxEZm_MVZeJ_1bPtz3w7Cow=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/M6Py4cdj0YL45hvdA8itNS5Zre9BRX-EOV3P3R9zwiIcEcu8ITFTsY-BENl6_YdS0jVRb7JwJngabAdzJtiTfieB9xtkmAiZTITwP0ulOcqbm5gaRjGwXSRvtyY34fgGkt1FOYJxcA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/dWtSOI12POfMzwYByoIPuOJPwwWn0_7_3klkuUL3dDhEW3EhbRLT19eVrbxGPmTyhF2w7yPEbzadG5TKbYwr3LdtpzdXuxv1ERM3zsYWPPAkKRFRICxeEv1PNJ5Dbv3G1YMcukrLyQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/9wH8Nv36D36Cq1wuPHp2fwXvFpVuDcdbmDaJOHAWrzYThDMDUOEYL9FMXlIJaDYoEqhRlQoqeIaF7z0Dc8bthaF_mMKaUshuxw3OyT9ezTf8gUfVYs--9IVwkzOiiVdF6THWXEyyvA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/D7SPM6xGEhvCyLtLJdzJWmEOS9ZEUhEIa5ISGz7HFbptGs1956jVRSb1FaX5XJ9ehUZc-FM_i19-gVzLtnWV7gNm58cW1YhjVdSzFC_dUIwNLAwFS0SQNTw1N9152JIRGpsI026snA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/JBpukctsaaGAYxodmZee70yey8VeNRJR_XysGeWP6zhFBfqdH7a9S8NFQ86xzyN9aAtmX1Wmk-y61JvFmTvYyu94XeZztpm-ULM_R9MAHYGAafOaLA51Er51l8uAzOaBBt8NahvQZg=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/HvhQtsxPdHuXlSJ0peHTtYO2C_QWP4DwtxBy4kqkvtCK9rJfNsYc1nG5R84h3jbQJQAfOL_6c8CNpJXQtlbIfEO4gZkomhwrR0Ic85KQ0sSP8Etn_CrE3dmOrrjsyioQLGoLTPZrlA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/cFwe4w6n0oHgRimYzDeTS31RGgoIoTf3X1SgMFv7_-X3ihUCJZO5XxiWivJYVTXtfFzANjVAVbytg7jol8cT6KICuNrEouN1Sw9210GwkezEuoo9hmwJAgrdqqkV0bzxm5uxCpW2lw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/JbRKdsxO_Ka75nkQTPeLW-NgZ6FNY9zH4XtlaBMIqvVy-u8gd6qZdsjm4bOIimRrsTPkTVKfdV6n19HyMGk_dRWXWuH--1k8DxscMnhNDqUz1ppj8u4LQEaZRBZSM_rGnHJgWWdrDA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/BzYduknvEM3py-Yo-XOKU23fti9lYOts14fYZbz68bOtzXV1opAtvS2BxIxc54Lo9HTLfnbxfOFnW84Vfn4b6sr3DESniHa_DBBc_W8i17Yru3Olg39fKA-4ua0fOM7nNPPFnlDwOQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/YSeSR50x6yZTSZiVhjbHlLiRZh9NOZPYgHs2o8CFFLTO_hKPFsUVj36RhVdMyCUBnPk2hJMhq6pfSnyG4mcC0uTW6kkFNyhDdEX0YudmajAVAJl2F_m6bUo44JSDX4CgNgwYF49bZQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/QcEHQjLllNdCHOZmX4ePcbZwZO5MbFd88DyTX2oxpz5gLLnjvPS8YjAMIFIXyAeJm_VYySe-ye61Km9ubi7Zg94vyx95CRxhGoSnewAksdJpg93dFWw9yfpGO_ZP_ECcl2zlRuycng=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/kr6dBmZ6LdP_RjA3eG1QeZXbQvD7LiqrGS6n5PRrqM2C-qMgQjHK06L4MH1uXqjacPLsszFh8C8K4br08onT3PpgcqaosaqUClt9-Fz__EtiBVWVZg1rszkpgRZ-qZzfhHfe-T4T9Q=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/G5LRanozkRyZsGKJP9S_8Z0FlmqrIjg8BGfSYY93OxuI3baUNp4AcmNvXB0CeRMSQl3sIGS467UcHHsiZyYdohxf9A5MpgRalfATvKqIZAsVM-MKwG4eMi_w0f9XQ2UstjYqcSpt0Q=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/UCoV-IOf9OxP0bXQpiitd7T99v-AXQ2ha0ZktzDdnBu8oxNQOjq-u_-umSU2970Z60mU7hQmSsR_VvZPr765n03p_liOZV2i5UqmW1-6qHvXd9Eu9yvkHQ3p5wR87bk2IhOVFIEaow=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/O6H5Hf2i7Kid2y6k72woRSvyhi-zcKFQaBZ4Y_tTZcpvNPMweAKZjuAGuZptjrfiNyad4yH_kyaqMc-xvyDSgpd4OmUW26fLGKTPMtH8PMqQL_nEmJK6rCCjLlLd692S6N0uoxL8Qw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/VGPqi3OxQhOv98LgS1DjKCFQBjAnkmVJ4kk3FH2tcsYkr4uuuTVN1kuJD_HO_9pNoMqf_6nQOY7XXnGLYlwUzb7ELthm8a77-oTM7LwrnY0oKhkAJuBJyMZx6fPuFWCXDbpsC9L-ew=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/AFvKnLj4o-_8jwwsjrx_eYruDDGbrouvBhIsdgon6NQxzV-p6jDlJW6--SARirk7Z54VMXc3FAmCI9OTAtb_kdc_e24wpSUtw8SMscrVPmWZqdelXuovT4OBP2hLLkyEwmZ_oSlaVg=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/q0sMc3-IY5rsZnYjZETCY4rsF0FRQ4UIrknQhx2lkOvhDBx4E_QzrMsBJnnnn37d-Ma7dwzRPV6oeLomnfedt-3kmvcXf4EVc6vjtlc-oWeLqW--gu1FSEqIX07LbHA6rFnwK458tg=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/tOpv8WzBbZB1XAi03CdwU-rAvzVIOukWv_ok_WR_nOiTzZGIxcyKo00RueYHQEVBySqw3pqlsnz9njpxk-JwQ-obHB6b3z2Wh5GCzkPyJGhQoF45X4EUO8oOLFuIR4CScXNRqyM_tQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/DtlCUk_-Skn8UT92Tc08ceFTWisNNPABIgTVeLhaYEQIevI3mjofhTmeJYOnlec8mASzXPaeaqADKeNCnrx1BalbFH57HH91dmTMCQSPhkSRRU1YCq-x-UcN7qR9PoJyf5_FzE2H2w=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/5zal5wEIUWHMs4DmRD8etwzFdICiw-mQEVFNA-roTTfh2z0Kex3dOcaAMuvDlmGxG_Zzl2lCrlpRzF3WTZbaP7PAuay8tVgWgcu1YJlgkV8Wtxbtgcood-mB0UdxQLd6rUvOLroHDw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/oBNuLodPKc5NX3Db2dFj8eH29qu1jiJ4CexVQWN8JdY0sMve9UchV4Bgm5og_P0DgEzxc-B49Gumd0EGLIh2EkV92h62tqFfFfaghKJqbi1Ooh-hUMv4fMMOAbeatQ1PuQTql5g8bg=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/vN3ZsfrOHsEvWH-LLRQ2vqmAirTaqFsWHrTrx7wYSNODUvP7MkkIDQI_asgCdgpVWl8n1RIqJaoCvVOftzPsc6P8rnBCA7-Avn3_06gmd3wMYDojf_vlXZ1M2z6yzWtvv5PubV3HIA=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/HDvk5ebgTnvgCNUaoeXspaie1YR9rN8jHecai-6_hVZr1cx6xnxm4mcRP5BpXAxx5b8Byh2MRex1HUvuAK4SmmiiYeMAo-usAC7jzfYHxAMIdKuq0tuBbZGsPa_ZGeMCzCQUkSUecw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/DJq2KdusQHPaazqnXIORqMm9psAI49YtMiKHEftFa4Ge44hsbfTUIPBYog_a8cjD53wrCr-GzXTZAZ8h9f5CRJNuVLf7em0aPwnE_nzXYsT4NpBrhNndN9tC_9dPPfx_sxYgJ0-SyQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/9sFAEnUx6fW6EDkQnYSv2qePJ19mSRJfCMJfxqwvx0ZZPYZfdWfBcYw3YnJNX5QotH9JsgVZKLv7KagH7mORVGhE1hjHKW185UydG7Htbb3WIpwvMEQLAwgrkftEJ_yQZbOb_7Atow=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/fz2UkhJIWecfrdC8TRY4LGw_zhQZjcipnHMBY6_JVs52vzZ_ExXnA_WSIMRcoKotrzgnZjFaFN6RgapOJYq-f2OTObrqfjAjxn2DjQmYJ9QnMj_zr30ihr8YIyDGDW65J5ToRezTTw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/0KrkozJTzhTC4uMEfnEr6n7--SELBVrTMO9diqFnNjauR8I-gajhZ4UwBcsxsLuOyJXY-IGtaS-hKXkwynN9Ql2UYq3Qnmwo174l9sUcbD8-jQSwFKUjvkVfGwo8UVTLOFUntuj8HQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/K-XyWDmEnLujGZ0TPY8mCWisBE0Bmc4NGS43CwWmHZgZ68DUdN9aam11o5DU5XOlmzPtSH6cR9wAdOfg1yfCnLww4dAo7qJM_pp08jkdbQMaRjBKNQkCMq0ecNXjeB4JO8uyiABb0w=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/bfF8W62ITYdm9vAiDxNcAbnj9ofT2TPmlqzZtAuY6PXeTeSxqeLJZVHuJMrIkWB4e24gJIX-a__6MAUC07OPQS9_hHbGIH6BVgNaOScMMFXliKIZ2MFR2BCbawFk2wkO_xgFBmqfpQ=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/LpL78e8fAqNd6XRJZjzo8dUGbfF3Ghyi2RmD5KxKprT2tHOHaxFOvaBk5ZeIHDq8_-a9Mba010v9h4dnPjYoMvZx8YamsyxKxyp9PliCpBX7VIPEhxlBL_pHJWFlMcAQZcKsDp65Cw=w1920-h1080" src="" alt="" />
+        <img data-src="https://lh3.googleusercontent.com/_Gk_F5BcGhIhIJld2jnfsmoKNIckHKxmpB4TC0PNLFeTo9rlbQRuRX-yZdqJd0-EBS9goZK0sUHGdaoHwap0u5S8yZrtjLFQoA3sB4EWLjas35ntNLckazc4pR15AtZzPENj8rMnsQ=w1920-h1080" src="" alt="" />
     </div>
+
 
 
 
