--- a/WATT.html
+++ b/WATT.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<script src="WATT.js"></script>
 <div class="top-nav">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
         <a href="#home" class="bar-button button">WATT CODING</a>
@@ -24,7 +25,7 @@
                 <div class="dropdown-content">
                     <a href="#links">Links</a>
                     <a href="#photos">Photos</a>
-                    <a href="#">Link 3</a>
+                    <a href="#videos">Videos</a>
                 </div>
             </div>
 <!--            <a href="#resources" class="bar-button button">Resources</a>-->
@@ -225,7 +226,7 @@
             <a href="http://spritebox.com/flash.html"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.png/v1/fill/w_370,h_230,al_c,q_80,usm_0.66_1.00_0.01/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.webp" alt="spritebox" style="width:100%;"></a>
         </div>
     </div>
-
+    <img src="PHOTO.png" style="width:100%;" id="photos"/>
     <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/dist/pa-embed-player.min.js" async></script>
     <div class="pa-embed-player" style="width:100%; height:480px; display:none;" id="photos"
          data-link="https://photos.google.com/share/AF1QipODcjtDoZ9tFirbDu0Bezc72B3c-TRsu8_kWJArTLfWip0IbU5mUfdaU3XO-zcGjQ?key=bTlJZUhCWlp4aW5CV2dWWV85M1R3ckkwUjdnRWNR"
@@ -291,7 +292,12 @@
     </div>
 
 
-
+<!--    <p class="codepen" data-height="265" data-theme-id="0" data-default-tab="js,result" data-user="wattcoding" data-slug-hash="MMVVWX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="MMVVWX">-->
+<!--  <span>See the Pen <a href="https://codepen.io/wattcoding/pen/MMVVWX/">-->
+<!--  MMVVWX</a> by WATT (<a href="https://codepen.io/wattcoding">@wattcoding</a>)-->
+<!--  on <a href="https://codepen.io">CodePen</a>.</span>-->
+<!--    </p>-->
+<!--    <script async src="https://static.codepen.io/assets/embed/ei.js"></script>-->
 
 
     <img src="FAQ.png" style="width:100%;"/>
