added photo banner

--- a/WATT.html
+++ b/WATT.html
@@ -228,7 +228,7 @@
     </div>
     <img src="PHOTO.png" style="width:100%;" id="photos"/>
     <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/dist/pa-embed-player.min.js" async></script>
-    <div class="pa-embed-player" style="width:100%; height:480px; display:none;" id="photos"
+    <div class="pa-embed-player" style="width:100%; height:480px; display:none;"
          data-link="https://photos.google.com/share/AF1QipODcjtDoZ9tFirbDu0Bezc72B3c-TRsu8_kWJArTLfWip0IbU5mUfdaU3XO-zcGjQ?key=bTlJZUhCWlp4aW5CV2dWWV85M1R3ckkwUjdnRWNR"
          data-title="WATT"
          data-description="57 new photos added to shared album">
