fixed top nav bar

--- a/WATT.html
+++ b/WATT.html
@@ -23,7 +23,8 @@
             <div class="dropdown">
                 <a href="#resources" class="bar-button button">Resources</a>
                 <div class="dropdown-content">
-                    <a href="#links">Links</a>
+                    <a href="#resources">Resources</a>
+                    <a href="#links" >Links</a>
                     <a href="#photos">Photos</a>
                     <a href="#videos">Videos</a>
                 </div>
