--- a/WATT.html
+++ b/WATT.html
@@ -226,9 +226,9 @@
     </div>
 
     <img src="PHOTO.png" style="width:100%;" id="photos"/>
-    <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="769" height="1024" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
-
-
+    <div style="text-align: center;">
+        <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="769" height="1024" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+    </div>
 <!--    <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/dist/pa-embed-player.min.js" async></script>-->
 <!--    <div class="pa-embed-player" style="width:100%; height:480px; display:none;"-->
 <!--         data-link="https://photos.google.com/share/AF1QipODcjtDoZ9tFirbDu0Bezc72B3c-TRsu8_kWJArTLfWip0IbU5mUfdaU3XO-zcGjQ?key=bTlJZUhCWlp4aW5CV2dWWV85M1R3ckkwUjdnRWNR"-->
@@ -329,7 +329,7 @@
 
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
-        
+
     </div>
     <script>
         var slideIndex = 1;
