--- a/Our-Team.html
+++ b/Our-Team.html
@@ -22,9 +22,10 @@
                 <a href="Resources.html" class="bar-button button">Resources</a>
                 <div class="dropdown-content">
                     <a href="Resources.html">Resources</a>
-                    <a href="#links" >Links</a>
-                    <a href="#photos">Photos</a>
-                    <a href="#FAQ">Videos</a>
+                    <a href="Resources.html" id="#links">Links</a>
+                    <a href="Resources.html" id="#photos">Photos</a>
+                    <a href="Resources.html" id="#FAQ">FAQ</a>
+                    <a href="CodePen.html">Practice Lesson</a>
                 </div>
             </div>
             <a href="Contact.html" class="bar-button button">Contact Us</a>
