--- a/CodePen.html
+++ b/CodePen.html
@@ -23,9 +23,9 @@
                     <a href="Resources.html" class="bar-button button">Resources</a>
                     <div class="dropdown-content">
                         <a href="Resources.html">Resources</a>
-                        <a href="Resources.html" id="#links">Links</a>
-                        <a href="Resources.html" id="#photos">Photos</a>
-                        <a href="Resources.html" id="#FAQ">FAQ</a>
+                        <a href="Links.html" id="#links">Links</a>
+                        <a href="Photos.html" id="#photos">Photos</a>
+                        <a href="FAQ.html" id="#FAQ">FAQ</a>
                         <a href="CodePen.html">Practice Lesson</a>
                     </div>
                 </div>
