--- a/Photos.html
+++ b/Photos.html
@@ -39,13 +39,11 @@
 
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="CALENDAR.png" style="width:100%;" id="calendar"/>
-        <div class="calendar" align="center">
-            <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
-        </div>
-    </div>
-    <hr>
 
+        <img src="PHOTO.png" style="width:100%;" id="photos"/>
+        <div style="text-align: center;">
+            <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="678" height="850" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+        </div>
 
 
 
