--- a/CodePen.html
+++ b/CodePen.html
@@ -36,8 +36,7 @@
     </div>
 
 
-
-
+    <img src="Practice.png" height="90" width="728"/>
     <div class="content-mission" style="max-width:1100px">
         <div class="row-mission padding-mission64" id="mission">
             <img src="Practice.png" style="width:100%;"/>
