--- a/CodePen.html
+++ b/CodePen.html
@@ -34,9 +34,7 @@
 
         </div>
     </div>
-
-
-    <img src="Practice.png" height="90" width="728"/>
+    
     <div class="content-mission" style="max-width:1100px">
         <div class="row-mission padding-mission64" id="mission">
             <img src="Practice.png" style="width:100%;"/>
@@ -47,6 +45,8 @@
             </p>
             <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
         </div>
+
+        <h1>Practice Lesson</h1>
         <hr>
 
 
