--- a/WATT.html
+++ b/WATT.html
@@ -34,13 +34,39 @@
     </div>
 </div>
 
-<header class="display-container" style="max-width:1600px;min-width:500px" id="home">
-    <img class="image-banner" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" style="width:100%;">
-    <div class="display-bottomleft padding-mission1224 opacity">
-        <a class="typeform-share" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="drawer_right" style="display:inline-block;text-decoration:none;background-color:white;color:black;cursor:pointer;font-family:'Times New Roman',sans-serif;font-size:20px;line-height:20px;text-align:center;margin:0;height:25px;padding:0px 20px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank" >Contact Us! </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-    </div>
+<header>
 
-</header>
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" style="width: 100%;">
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="https://static.wixstatic.com/media/cfb250_f5b627dc40824079889bc548e6a3fb73~mv2_d_4032_3024_s_4_2.jpeg/v1/fill/w_1952,h_1464,fp_0.50_0.50,q_90/cfb250_f5b627dc40824079889bc548e6a3fb73~mv2_d_4032_3024_s_4_2.webp?retry=1" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="https://static.wixstatic.com/media/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.jpg/v1/fill/w_2056,h_1542,fp_0.50_0.50,q_90/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.webp?retry=1" style="width:100%">
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div></header>
 
 
 
@@ -106,14 +132,37 @@
 
 
 
+    <script>
+        // photo slideshow banner homepage
+        var slideIndex = 1;
+        showSlides(slideIndex);
 
+        // Next/previous controls
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
 
-<!--    <p class="codepen" data-height="265" data-theme-id="0" data-default-tab="js,result" data-user="wattcoding" data-slug-hash="MMVVWX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="MMVVWX">-->
-<!--  <span>See the Pen <a href="https://codepen.io/wattcoding/pen/MMVVWX/">-->
-<!--  MMVVWX</a> by WATT (<a href="https://codepen.io/wattcoding">@wattcoding</a>)-->
-<!--  on <a href="https://codepen.io">CodePen</a>.</span>-->
-<!--    </p>-->
-<!--    <script async src="https://static.codepen.io/assets/embed/ei.js"></script>-->
+        // Thumbnail image controls
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            if (n > slides.length) {slideIndex = 1}
+            if (n < 1) {slideIndex = slides.length}
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex-1].style.display = "block";
+            dots[slideIndex-1].className += " active";
+        }
+    </script>
 
 
 
