--- a/CodePen.html
+++ b/CodePen.html
@@ -70,7 +70,8 @@
         <p>Note: You cannot just copy the image url. Right click and copy the image address and then paste that for the image src.</p>
         <img src="ourmissioncodepen.png" style="width:100%;"/>
         <h3>5. Adding Videos</h3>
-        <p> </p>
+        <p>The tag iframe is used when you want to display another web page in your web page such as a youtube video.</p>
+        <p>1. </p>
         <hr>
 
 
