--- a/CodePen.html
+++ b/CodePen.html
@@ -71,7 +71,9 @@
         <img src="ourmissioncodepen.png" style="width:100%;"/>
         <h3>5. Adding Videos</h3>
         <p>The tag iframe is used when you want to display another web page in your web page such as a youtube video.</p>
-        <p>1. </p>
+        <p>1. Use the format of "iframe src="youtube-video"</p>
+        <p>2. You can also change the height and width of a image or video by adding within the iframe tag "height=num" and "width=num"</p>
+        <img src="addedvideocodepen.png" style="width:100%;"/>
         <hr>
 
 
