--- a/WATT.html
+++ b/WATT.html
@@ -47,7 +47,7 @@
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="https://static.wixstatic.com/media/cfb250_f5b627dc40824079889bc548e6a3fb73~mv2_d_4032_3024_s_4_2.jpeg/v1/fill/w_1952,h_1464,fp_0.50_0.50,q_90/cfb250_f5b627dc40824079889bc548e6a3fb73~mv2_d_4032_3024_s_4_2.webp?retry=1" style="width:100%">
+            <img src="banner2.png" style="width:100%; height: 400px;">
         </div>
 
         <div class="mySlides fade">
