done with instructions

--- a/CodePen.html
+++ b/CodePen.html
@@ -75,13 +75,10 @@
         <p>2. You can also change the height and width of a image or video by adding within the iframe tag "height=num" and "width=num"</p>
         <img src="addedvideocodepen.png" style="width:100%;"/>
         <hr>
-
-
-
-
-
-
-
-    </div>
+        <h3>6. Creating "DIVS"</h3>
+        <p>A div element creates a section or division. You can identify a div by giving it a class name.</p>
+        <p>1. For example: To center a section of elements create a class in your css file. To create a class for a div use "div.nameofclass" and then brackets</p>
+        <p>2. For the purpose of this lesson create a class that will center the text of your div elements.</p>
+        <img src="divelementcodepen.png" style="width:100%;" /></div>
     </body>
     </html>
