--- a/CodePen.html
+++ b/CodePen.html
@@ -78,7 +78,7 @@
         <h3>6. Creating "DIVS"</h3>
         <p>A div element creates a section or division. You can identify a div by giving it a class name.</p>
         <p>1. For example: To center a section of elements create a class in your css file. To create a class for a div use "div.nameofclass" and then brackets</p>
-        <p>2. For the purpose of this lesson create a class that will center the text of your div elements.</p>
+        <p>2. For the purpose of this lesson create a class that will center the text of your div elements. To center text use "text-align:center;</p>
         <img src="divelementcodepen.png" style="width:100%;" /></div>
     </body>
     </html>
