--- a/CodePen.html
+++ b/CodePen.html
@@ -49,7 +49,7 @@
         <h1>Practice Lesson</h1>
         <h2>Let's Make a Website</h2>
         <hr>
-        <h3>1. Starting your website</h3>
+        <h3>1. Starting Your Website</h3>
         <p>1. Create a new pen through codepen.com. Codepen is a website which allows you to write code in the browser, and see the results of it as you build.</p>
         <p>2. Name your website. It can be your name or anything relevant to your website contents. Click the pen at the top left hand corner to name your website. Example: "Madeleine's Website"</p>
         <img src="Step1codepen.png" style="width:100%;" />
@@ -65,7 +65,7 @@
         <p>3. Note: to center text you can also create a class called "center" which will center all your text for you in CSS. To create a class in css use a "." and then name the class whatever name you want. Place all of the class content in "{}" brackets.</p>
         <p> Extra: You can also change the text color of your titles and paragraphs. In CSS, put the name of the tag you're using and then inside the brackets put color: "purple". To change the font you're using include also in the brackets font-family: "'Times New Roman', serif". This allows for you to create a font family which allows you to prioritize a list of fonts you would like to use. For example if Times New Roman cannot be accessed the text would be changed to serif. </p>
         <img src="codepen step 3.png" style="width:100%;"/>
-        <h3>4. Adding images</h3>
+        <h3>4. Adding Images</h3>
         <p>In HTML images are defined using a "img" tag. Use img src= " " to specify a URL in which you want to access a photo from. The "alt" tag is used a a description of your picture. This is helpful if your website doesnt load the picture, the user will still be able to know what the image was supposed to be.</p>
         <p>Note: You cannot just copy the image url. Right click and copy the image address and then paste that for the image src.</p>
         <img src="ourmissioncodepen.png" style="width:100%;"/>
