--- a/FAQ.html
+++ b/FAQ.html
@@ -8,6 +8,32 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
+<style>
+    .accordion {
+        background-color: ghostwhite;
+        color: #444;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        transition: 0.4s;
+    }
+
+
+    .active, .accordion:hover {
+        background-color: rgba(210,240,241, 1);
+    }
+
+    .panel {
+        padding: 0 18px;
+        display: none;
+        background-color: rgba(210, 240, 241, .5);
+        overflow: hidden;
+    }
+</style>
 
 </head>
 <body>
@@ -92,24 +118,22 @@
 
 
 
+<script>
+    var acc = document.getElementsByClassName("accordion");
+    var i;
 
-    <script>
-        var acc = document.getElementsByClassName("accordion");
-        var i;
-
-        for (i = 0; i < acc.length; i++) {
-            acc[i].addEventListener("click", function() {
-                this.classList.toggle("active");
-                var panel = this.nextElementSibling;
-                if (panel.style.display === "block") {
-                    panel.style.display = "none";
-                } else {
-                    panel.style.display = "block";
-                }
-            });
-        }
-
-    </script>
+    for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        });
+    }
+</script>
 
 
 </div>
