--- a/Resources.html
+++ b/Resources.html
@@ -8,7 +8,32 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
+<style>
+    .accordion {
+        background-color: ghostwhite;
+        color: #444;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        transition: 0.4s;
+    }
 
+
+    .active, .accordion:hover {
+        background-color: rgba(210,240,241, 1);
+    }
+
+    .panel {
+        padding: 0 18px;
+        display: none;
+        background-color: rgba(210, 240, 241, .5);
+        overflow: hidden;
+    }
+</style>
 </head>
 <body>
 <script src="WATT.js"></script>
