--- a/CodePen.html
+++ b/CodePen.html
@@ -50,7 +50,7 @@
         <h2>Let's Make a Website</h2>
         <hr>
         <h3>1. Starting Your Website</h3>
-        <p>1. Create a new pen through codepen.com. Codepen is a website which allows you to write code in the browser, and see the results of it as you build.</p>
+        <p>1. Create a new pen through <a href="https://codepen.io/pens/">codepen</a>. Codepen is a website which allows you to write code in the browser, and see the results of it as you build.</p>
         <p>2. Name your website. It can be your name or anything relevant to your website contents. Click the pen at the top left hand corner to name your website. Example: "Madeleine's Website"</p>
         <img src="Step1codepen.png" style="width:100%;" />
         <h3>2. Create Your Website Through HTML</h3>
