--- a/WATT.html
+++ b/WATT.html
@@ -47,12 +47,12 @@
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="banner2.png" style="width:100%;">
+            <img src="banner2.png" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="https://static.wixstatic.com/media/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.jpg/v1/fill/w_2056,h_1542,fp_0.50_0.50,q_90/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.webp?retry=1" style="width:100%; height: 500px;">
+            <img src="https://static.wixstatic.com/media/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.jpg/v1/fill/w_2056,h_1542,fp_0.50_0.50,q_90/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.webp?retry=1" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
         </div>
 
         <!-- Next and previous buttons -->
